--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.49.3",
     "react-input-mask": "^3.0.0-alpha.2",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.1",
     "react-toastify": "^9.1.3",
     "swiper": "9.4.1",
